# Docent_Bot

./: .env.example  .gitignore  README.md  app.py  art_gallery.pgm  art_gallery.yaml  map.yaml  objects.yaml  requirements.txt  실행 해야 하는 명령어 모음.md
mydrive/install/: local_setup.sh  setup.sh
mydrive/install/tb3_standalone_nav/include/tb3_standalone_nav/: visibility_control.h
mydrive/install/tb3_standalone_nav/include/tb3_standalone_nav/bt/: bt_action_node.hpp
mydrive/install/tb3_standalone_nav/include/tb3_standalone_nav/controller/: dwa_controller_server.hpp
mydrive/install/tb3_standalone_nav/include/tb3_standalone_nav/core/: lifecycle_node_base.hpp
mydrive/install/tb3_standalone_nav/include/tb3_standalone_nav/costmap/: edt.hpp
mydrive/install/tb3_standalone_nav/include/tb3_standalone_nav/estimation/: ekf_node.hpp
mydrive/install/tb3_standalone_nav/include/tb3_standalone_nav/planner/: a_star_planner_server.hpp
mydrive/install/tb3_standalone_nav/share/ament_index/resource_index/package_run_dependencies/: tb3_standalone_nav
mydrive/install/tb3_standalone_nav/share/tb3_standalone_nav/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mydrive/install/tb3_standalone_nav/share/tb3_standalone_nav/behavior_trees/: navigate_to_pose.xml
mydrive/install/tb3_standalone_nav/share/tb3_standalone_nav/cmake/: tb3_standalone_navConfig.cmake
mydrive/install/tb3_standalone_nav/share/tb3_standalone_nav/launch/: tb3_nav_launch.py
mydrive/log/: latest_build
mydrive/src/tb3_standalone_nav/: CMakeLists.txt
mydrive/src/tb3_standalone_nav/include/tb3_standalone_nav/costmap/: costmap_2d.hpp  dynamic_obstacle_layer.hpp
mydrive/src/tb3_standalone_nav/include/tb3_standalone_nav/estimation/: amcl_node.hpp
mydrive/src/tb3_standalone_nav/launch/: tb3_nav_launch.py
mydrive/src/tb3_standalone_nav/src/bt/: bt_navigator.cpp
mydrive/src/tb3_standalone_nav/src/controller/: pure_pursuit_controller_server.cpp
mydrive/src/tb3_standalone_nav/src/core/: lifecycle_manager_node.cpp  lifecycle_node_base.cpp
mydrive/src/tb3_standalone_nav/src/costmap/: costmap_2d.cpp  dynamic_obstacle_layer.cpp  edt.cpp
mydrive/src/tb3_standalone_nav/src/estimation/: amcl_node.cpp
mydrive/src/tb3_standalone_nav/src/map/: my_map.yaml
mydrive/src/tb3_standalone_nav/src/planner/: a_star_planner_server.cpp
person_tts/: map.yaml
person_tts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
person_tts/install/final_pro/share/final_pro/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
person_tts/install/my-test-package/share/my-test-package/: package.sh
person_tts/src/final_pro/: setup.cfg  setup.py
person_tts/src/final_pro/final_pro/: drive.py  person_detector.py  robot_tts.py
static/css/: analytics.css  artwork-list.css  course-recommendation.css  dashboard.css  guide.css  index.css  listening.css  map-editor.css  slam.css  survey.css
static/js/: analytics.js  artwork-list.js  course-recommendation.js  dashboard.js  data.js  guide.js  home.js  index.js  listening.js  map-editor.js  slam.js  survey.js
static/maps/: art_gallery.pgm  map_1.pgm  map_1.yaml  qwer.pgm  qwer.yaml  simul1.pgm  test_1.pgm  test_1.yaml  test_2.pgm  test_2.yaml  turtle.pgm  turtle.yaml
templates/: analytics.html  artwork-list.html  course-recommendation.html  dashboard.html  guide.html  index.html  listening.html  map-editor.html  slam.html  survey.html
